2011-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	co: Add option ‘-S’ to enable "self-same" mode.

	* co.1in (OPTIONS): Add entry for ‘-S’.

2011-09-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	ident: Recognize Subversion "fixed-width keyword syntax".

	* ident.1in (DESCRIPTION): Add paragraph describing patterns
	recognized to support Subversion "fixed-width keyword syntax".

2011-08-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.8

2011-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Pass through ‘integrity’ field in RCS file.

	* rcsfile.5in (admin): Add ‘integrity’.

2011-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add sanity check for manpage creation.

	* Makefile.am (.5in.5, .1in.1): After doing the
	action, check that target file exists and is non-empty.

2011-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Make soelim(1) user-configurable.

	* Makefile.am (soelim): Use $(SOELIM).

2010-11-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	ci, rcs: Make MSG in ‘-m...MSG’ optional.

	* b-emptylogmessage: New file.
	* Makefile.am (bits): Add b-emptylogmessage.
	* ci.1in: Update ‘-m’; use b-emptylogmessage.
	* rcs.1in: Likewise.

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int man] Make dependency specification more idiomatic.

	* Makefile.am (dist_noinst_MANS): New var.
	(BUILT_SOURCES): Add $(dist_noinst_MANS).
	(EXTRA_DIST): Remove rcsfreeze.1, rcsfreeze.1in;
	add ‘$(dist_noinst_MANS:%=%in)’.
	(rcsfile.5): Delete target.
	(.5in.5): New old-fashioned suffix rule.
	(.1in.1): Clear dependency list for old-fashioned suffix rule.
	($(dist_man_MANS), $(dist_noinst_MANS)):
	Specify dependencies of ‘REL’ and ‘$(bits)’.

2010-08-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int man] Fix omission: Specify directory for ‘soelim -I’.

	Regression introduced 2010-05-25,
	"[man] Use soelim(1) for rcsfile.5 generation".
	* Makefile.am (soelim): Say "-I.", not "-I".

2010-06-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Update license to GPLv3+.
