@@ -1,3 +1,11 @@
+2011-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Use portable Makefile subst-ref variable syntax.
+
+	The syntax $(VAR:%=%SUFFIX) is a GNU Make extension.
+
+	* Makefile.am (EXTRA_DIST): Use $(VAR:=SUFFIX).
+
 2011-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	co: Add option ‘-S’ to enable "self-same" mode.
